--- a/android/1、动态权限的坑.md
+++ b/android/1、动态权限的坑.md
@@ -2,7 +2,7 @@
 > 问题描述：
 >   Android 6.0 （oppo r9s ，红米3 等一代6.0.1定制rom手机）再获取是否有权限时，返回值不正确。明明没有权限却返回了有权限。
 ### 解决方案
-  - checkSelfPermission 返回 PERMISSION_GRANTED之后再次通过以下方法判断。
+  - **checkSelfPermission** 返回 **PERMISSION_GRANTED** 之后再次通过以下方法判断。
   ```java
     //>=23时判断权限是否加载
     private static boolean isGranted(Activity activity, String permission){
@@ -51,6 +51,113 @@
     }
   ```
 ## 二. 手机联系人权限获取兼容
-> 问题
-> 问题阿斯顿发
+> 问题描述
+> 同样是在一代6.0.1的某些定制rom上出现问题。明明没有权限却返回了**PERMISSION_GRANTED**
+### 解决方案
+  ```java
+  
+    /**
+     * ContentProvider获取联系人
+     *
+     * @param context
+     * @param onContactsVoListCallBack
+     * @return
+     */
+    private static List<ContactsVo> getContactsList(final Activity context, OnContactsVoListCallBack onContactsVoListCallBack) {
+        //联系人的Uri，也就是content://com.android.contacts/contacts
+        Uri uri = ContactsContract.Contacts.CONTENT_URI;
+        //指定获取_id和display_name两列数据，display_name即为姓名
+        String[] projection = new String[]{
+                //联系人号码
+                ContactsContract.Contacts._ID,
+                //联系人姓名
+                ContactsContract.Contacts.DISPLAY_NAME,
+
+        };
+        List<ContactsVo> contactsList = new ArrayList<>();
+        //根据Uri查询相应的ContentProvider，cursor为获取到的数据集
+        Cursor cursor = context.getContentResolver().query(uri, projection, null, null, null);
+        try {
+            int i = 0;
+            if (onContactsVoListCallBack != null && cursor != null) {
+                onContactsVoListCallBack.getPermissionIsOk();
+            } else {
+               ** //适配 oppo r9s，红米3（6.0.1）手机，没有权限但是会提示有权限，走到cursor为null就回调。正常有权限cursor不会为null
+//                if (Build.MODEL.toLowerCase().contains("oppo")) {
+                //Material 风格
+                final MaterialDialog mMaterialDialog = new MaterialDialog(context);
+                mMaterialDialog
+                        .setTitle("读取联系人" + context.getResources().getString(R.string.permission_dialog_show_title))
+                        .setMessage(R.string.permission_dialog_show_content)
+                        .setPositiveButton(R.string.permission_dialog_show_confirm, new View.OnClickListener() {
+                            @Override
+                            public void onClick(View v) {
+                                Intent intent = new Intent();
+                                intent.setAction("android.settings.APPLICATION_DETAILS_SETTINGS");
+                                intent.setData(Uri.fromParts("package", context.getPackageName(), null));
+                                context.startActivity(intent);
+                                mMaterialDialog.dismiss();
+                            }
+                        })
+                        .setNegativeButton(R.string.permission_dialog_show_exit,
+
+                                new View.OnClickListener() {
+                                    @Override
+                                    public void onClick(View v) {
+                                        mMaterialDialog.dismiss();
+//                                ActivityManager.create().finishAllActivity();
+                                    }
+                                })
+                        .setCanceledOnTouchOutside(false)
+                        .show();
+            }
+//            }**
+            if (cursor != null && cursor.moveToFirst()) {
+                do {
+                    ContactsVo contactsVo = new ContactsVo();
+                    Long id = cursor.getLong(0);
+                    //获取姓名
+                    String name = cursor.getString(1);
+                    //指定获取NUMBER这一列数据
+                    String[] phoneProjection = new String[]{
+                            ContactsContract.CommonDataKinds.Phone.NUMBER
+                    };
+//                arr[i] = id + " , 姓名：" + name;
+                    contactsVo.setName(name);
+                    contactsVo.setId(id);
+                    //根据联系人的ID获取此人的电话号码
+                    Cursor phonesCusor = context.getContentResolver().query(
+                            ContactsContract.CommonDataKinds.Phone.CONTENT_URI,
+                            phoneProjection,
+                            ContactsContract.CommonDataKinds.Phone.CONTACT_ID + "=" + id,
+                            null,
+                            null);
+
+                    List<String> phoneList = new ArrayList<>();
+                    //因为每个联系人可能有多个电话号码，所以需要遍历
+                    if (phonesCusor != null && phonesCusor.moveToFirst()) {
+                        do {
+                            String num = phonesCusor.getString(0);
+//                        arr[i] += " , 电话号码：" + num;
+                            phoneList.add(num);
+                        } while (phonesCusor.moveToNext());
+                    }
+
+                    contactsVo.setPhoneNums(phoneList);
+
+                    contactsList.add(contactsVo);
+
+                    i++;
+                } while (cursor.moveToNext());
+            }
+        } catch (Exception e) {
+        } finally {
+            if (cursor != null) {
+                cursor.close();
+            }
+        }
+        return contactsList;
+    }
+  
+  ```
 ## 二. 手机联系人权限获取兼容
