--- a/android/1、动态权限的坑.md
+++ b/android/1、动态权限的坑.md
@@ -54,6 +54,8 @@
 > 问题描述
 > 同样是在一代6.0.1的某些定制rom上出现问题。明明没有权限却返回了**PERMISSION_GRANTED**
 ### 解决方案
+  **在获取cursor时处理，如果真有权限那么cursor不为null，没有权限会返回null。返回null的时候去弹框让他去后台开权限。**
+
   ```java
   
     /**
@@ -160,4 +162,4 @@
     }
   
   ```
-## 二. 手机联系人权限获取兼容
+
