--- a/android/自定义View/4、绘制顺序-动画初探.md
+++ b/android/自定义View/4、绘制顺序-动画初探.md
@@ -3,3 +3,10 @@
 ![](https://github.com/IRVING18/notes/blob/master/android/file/pc1.jpg)
 ## 2.具体作用
 ![](https://github.com/IRVING18/notes/blob/master/android/file/pc2.jpg)
+## 3.例：
+### 3.1 给EditText添加绿色背景
+> 不能直接设置background，设置之后就没有下划线了，这时在draw()super之前drawcolor就ok了。
+# 二、属性动画
+## 1.ViewPropertyAnimator
+
+## 2.ObjectAnimator
