--- a/android/自定义View/4、绘制顺序-动画初探.md
+++ b/android/自定义View/4、绘制顺序-动画初探.md
@@ -6,7 +6,24 @@
 ## 3.例：
 ### 3.1 给EditText添加绿色背景
 > 不能直接设置background，设置之后就没有下划线了，这时在draw()super之前drawcolor就ok了。
-# 二、属性动画
+# 二、属性动画 Property Animation
 ## 1.ViewPropertyAnimator
-
+### 1.1基本用法
+```java
+imageView.animate().translationZ(dpToPixel(15));
+```
+### 1.2方法汇总
+![](https://github.com/IRVING18/notes/blob/master/android/file/anim1.jpg)
 ## 2.ObjectAnimator
+### 2.1使用方式
+- 1.如果是自定义控件，需要添加 setter / getter 方法；
+- 2.用 ObjectAnimator.ofXXX(target, propertyName, value1, value2) 创建 ObjectAnimator 对象；
+- 3.用 start() 方法执行动画。    
+> target: 需要变化的view  
+> propertyName: **需要变化的setterXX方法的XX**  
+> value1,value2: 从value1变化到value2
+**注意：  
+  1、propertyName和view中的属性参数没关系，只和setterXX后XX有关系。   
+  2、一般如果需要绘制变化，需要在setterXX中invalidate();**
+
+  
