--- a/android/自定义View/4、绘制顺序-动画初探.md
+++ b/android/自定义View/4、绘制顺序-动画初探.md
@@ -25,6 +25,14 @@ imageView.animate().translationZ(dpToPixel(15));
 
 **注意：  
   1、propertyName和view中的属性参数没关系，只和setterXX后XX有关系。   
-  2、一般如果需要绘制变化，需要在setterXX中invalidate();**
-
+  2、一般如果需要绘制变化，需要在setterXX中invalidate();   **
+## 3、通用方法
+### 3.1 setDuration();
+> 设置执行时间
+### 3.2 setInterpolator();
+> 设置速度设置器
+### 3.3 viewPropertyAnimator.setListenr()  -- ObjectAnimator.addListener()
+- onAnimationStart(Animator)  
+> 当动画开始执行时，这个方法被调用。  
+- onAnimationStart(Animator)  
   
