--- a/android/自定义View/4、绘制顺序-动画初探.md
+++ b/android/自定义View/4、绘制顺序-动画初探.md
@@ -31,8 +31,23 @@ imageView.animate().translationZ(dpToPixel(15));
 > 设置执行时间
 ### 3.2 setInterpolator();
 > 设置速度设置器
-### 3.3 viewPropertyAnimator.setListenr()  -- ObjectAnimator.addListener()
+## 4、设置监听器
+### 4.1 解除监听器
+- viewPropertyAnimator
+> set{update}Listener(null)  
+- ObjectAnimator
+> remove{update}Listener();
+### 4.2 其他差异
+- 4.2.1 另外，由于 ObjectAnimator 支持使用 pause() 方法暂停，所以它还多了一个 addPauseListener() / removePauseListener() 的支持；
+- 4.2.2 而 ViewPropertyAnimator 则独有 withStartAction() 和 withEndAction() 方法，可以设置一次性的动画开始或结束的监听。
+### 4.3 viewPropertyAnimator.setListenr()  -- ObjectAnimator.addListener()
 - onAnimationStart(Animator)  
-> 当动画开始执行时，这个方法被调用。  
-- onAnimationStart(Animator)  
-  
+  > 当动画开始执行时，这个方法被调用。  
+- onAnimationEnd(Animator animation) 
+  > 当动画结束时，这个方法被调用。   
+- onAnimationCancel(Animator animation)
+  > 当动画被通过 cancel() 方法取消时，这个方法被调用。
+- onAnimationRepeat(Animator animation)
+  > 当动画通过 setRepeatMode() / setRepeatCount() 或 repeat() 方法重复执行时，这个方法被调用。
+由于 ViewPropertyAnimator 不支持重复，所以这个方法对 ViewPropertyAnimator 相当于无效。
+### 4.3 
