--- a/android/自定义View/4、绘制顺序-动画初探.md
+++ b/android/自定义View/4、绘制顺序-动画初探.md
@@ -50,4 +50,5 @@ imageView.animate().translationZ(dpToPixel(15));
 - onAnimationRepeat(Animator animation)
   > 当动画通过 setRepeatMode() / setRepeatCount() 或 repeat() 方法重复执行时，这个方法被调用。
 由于 ViewPropertyAnimator 不支持重复，所以这个方法对 ViewPropertyAnimator 相当于无效。
-### 4.3 
+### 4.4 ViewPropertyAnimator.setUpdateListener() / ObjectAnimator.addUpdateListener()
+
