--- a/android/自定义View/5、属性动画次篇.md
+++ b/android/自定义View/5、属性动画次篇.md
@@ -1,7 +1,15 @@
-# 一、ArgbEvaluator 来做颜色渐变的动画
-例子：   
+# 一、TypeEvaluator
+## 1.ArgbEvaluator 来做颜色渐变的动画
+**例子1：**
+> 使用系统自带的ArgbEvaluator
 ```java
 ObjectAnimator animator = ObjectAnimator.ofInt(view, "color", 0xffff0000, 0xff00ff00);  
 animator.setEvaluator(new ArgbEvaluator());  
 animator.start();  
 ```
+![](https://github.com/IRVING18/notes/blob/master/android/file/argb.gif)
+
+**例子2：**
+> 自建HSV模式HsvEvaluator。
+[点这里](https://www.baidu.com)
+ 
