--- a/android/自定义View/5、属性动画次篇.md
+++ b/android/自定义View/5、属性动画次篇.md
@@ -13,3 +13,24 @@ animator.start();
 > 自建HSV模式HsvEvaluator。
 [点这里](https://www.baidu.com)
  
+## 2.PointFEvaluator 来自定义其他Evaluator 插值器
+> 自定义Evaluator 设置    
+```java
+    private class PointFEvaluator implements TypeEvaluator<PointF> {
+        PointF outPointF = new PointF();
+        // 重写 evaluate() 方法，让 PointF 可以作为属性来做动画
+        @Override
+        public PointF evaluate(float fraction, PointF startValue, PointF endValue) {
+            outPointF.x = startValue.x + (endValue.x - startValue.x) * fraction;
+            outPointF.y = startValue.y + (endValue.y - startValue.y) * fraction;
+            return outPointF;
+        }
+    }
+```
+> 配合ObjectAnimator使用    
+```java
+    ObjectAnimator animator = ObjectAnimator.ofObject(view, "position",new PointFEvaluator(), new PointF(0, 0), new PointF(1, 1));
+    animator.setInterpolator(new LinearInterpolator());
+    animator.setDuration(1000);
+    animator.start();
+```
