--- a/android/自定义View/5、属性动画次篇.md
+++ b/android/自定义View/5、属性动画次篇.md
@@ -34,3 +34,42 @@ animator.start();
     animator.setDuration(1000);
     animator.start();
 ```
+# 二、PropertyValuesHolder和ObjectAnimator.ofPropertyValuesHolder() 多个动画一起执行
+```java
+     // 使用 PropertyValuesHolder.ofFloat() 来创建不同属性的动画值方案
+     // 第一个： scaleX 从 0 到 1
+     // 第二个： scaleY 从 0 到 1
+     // 第三个： alpha 从 0 到 1
+     PropertyValuesHolder holder1 = PropertyValuesHolder.ofFloat("scaleX", 0, 1);
+     PropertyValuesHolder holder2 = PropertyValuesHolder.ofFloat("scaleY", 0, 1);
+     PropertyValuesHolder holder3 = PropertyValuesHolder.ofFloat("alpha", 0, 1);
+     // 然后，用 ObjectAnimator.ofPropertyValuesHolder() 把三个属性合并，创建 Animator 然后执行
+     ObjectAnimator objectAnimator = ObjectAnimator.ofPropertyValuesHolder(view, holder1, holder2, holder3);
+     objectAnimator.setDuration(2000);
+     objectAnimator.setInterpolator(new BounceInterpolator());
+     objectAnimator.start();
+```
+# 三、AnimatorSet 多个动画结合，可以控制执行顺序
+```java
+     ObjectAnimator animator1 = ObjectAnimator.ofFloat(view, "alpha", 0, 1);
+     animator1.setDuration(2000);
+     ObjectAnimator animator2 = ObjectAnimator.ofFloat(view, "translationX", -200, 200);
+     animator2.setDuration(500);
+     ObjectAnimator animator3 = ObjectAnimator.ofFloat(view, "rotation", 0, 1080);
+     animator3.setDuration(1000);
+
+     AnimatorSet animatorSet = new AnimatorSet();
+     // 用 AnimatorSet 的方法来让三个动画协作执行
+     // 要求 1： animator1 先执行，animator2 在 animator1 完成后立即开始
+     // 要求 2： animator2 和 animator3 同时开始
+     animatorSet.play(animator1).before(animator2);
+     animatorSet.playTogether(animator2,animator3);
+
+     animatorSet.start();
+```
+# 四、PropertyValuesHolders.ofKeyframe() 把同一个属性拆分
+除了合并多个属性和调配多个动画，你还可以在 PropertyValuesHolder 的基础上更进一步，通过设置 Keyframe （关键帧），把同一个动画属性拆分成多个阶段。例如，你可以让一个进度增加到 100% 后再「反弹」回来。
+
+
+
+
