--- a/android/自定义View/5、属性动画次篇.md
+++ b/android/自定义View/5、属性动画次篇.md
@@ -70,6 +70,17 @@ animator.start();
 # 四、PropertyValuesHolders.ofKeyframe() 把同一个属性拆分
 除了合并多个属性和调配多个动画，你还可以在 PropertyValuesHolder 的基础上更进一步，通过设置 Keyframe （关键帧），把同一个动画属性拆分成多个阶段。例如，你可以让一个进度增加到 100% 后再「反弹」回来。
 
-
+```java
+     // 在 0% 处开始
+     Keyframe keyframe1 = Keyframe.ofFloat(0, 0);  
+     // 时间经过 50% 的时候，动画完成度 100%
+     Keyframe keyframe2 = Keyframe.ofFloat(0.5f, 100);  
+     // 时间见过 100% 的时候，动画完成度倒退到 80%，即反弹 20%
+     Keyframe keyframe3 = Keyframe.ofFloat(1, 80);  
+     PropertyValuesHolder holder = PropertyValuesHolder.ofKeyframe("progress", keyframe1, keyframe2, keyframe3);
+     
+     ObjectAnimator animator = ObjectAnimator.ofPropertyValuesHolder(view, holder);  
+     animator.start();  
+```
 
 
