--- a/android/自定义View/4、绘制顺序-动画初探.md
+++ b/android/自定义View/4、绘制顺序-动画初探.md
@@ -27,7 +27,13 @@ imageView.animate().translationZ(dpToPixel(15));
   1、propertyName和view中的属性参数没关系，只和setterXX后XX有关系。   
   2、一般如果需要绘制变化，需要在setterXX中invalidate();   **
 ### 2.2方法
-  
+  ① ObjectAnimator.ofObject(view,"",new xxxEvaluator(),start,end)   
+  > 设置插值器
+  ② ObjectAnimator.ofInt/Float(view,"properName",start,end)    
+  > 设置变化参数的类型，开始值和结束值
+  ③ ObjectAnimator.ofPropertyValuesHolder(view,PropertyValuesHolder.ofFloat("propetyName1",start,end),PropertyValuesHolder.ofFloat("propetyName2",start,end))    
+  > 多个动画一起执行   
+  > PropertyValuesHolder.ofFloat/Int() //多个动画
 # 3、ValueAnimator 最基本的轮子
 额外简单说一下 ValuesAnimator。很多时候，你用不到它，只是在你使用一些第三方库的控件，而你想要做动画的属性却没有 setter / getter 方法的时候，会需要用到它。
 
