--- a/android/自定义View/4、绘制顺序-动画初探.md
+++ b/android/自定义View/4、绘制顺序-动画初探.md
@@ -33,7 +33,9 @@ imageView.animate().translationZ(dpToPixel(15));
   > 设置变化参数的类型，开始值和结束值
   ③ ObjectAnimator.ofPropertyValuesHolder(view,PropertyValuesHolder.ofFloat("propetyName1",start,end),PropertyValuesHolder.ofFloat("propetyName2",start,end))    
   > 多个动画一起执行   
-  > PropertyValuesHolder.ofFloat/Int() //多个动画
+  > PropertyValuesHolder.ofFloat/Int() //多组动画设置，结合上边方法同时执行   
+  > PropertyValuesHolder.ofKeyframe() //将同一属性拆分，然后有顺序的执行。比如后边进度条0-100，100-80。[点这里](https://github.com/IRVING18/notes/blob/master/android/自定义View/5、属性动画次篇.md)   
+  
 # 3、ValueAnimator 最基本的轮子
 额外简单说一下 ValuesAnimator。很多时候，你用不到它，只是在你使用一些第三方库的控件，而你想要做动画的属性却没有 setter / getter 方法的时候，会需要用到它。
 
