--- a/Mac 使用笔记/1、移动硬盘读出不出来.md
+++ b/Mac 使用笔记/1、移动硬盘读出不出来.md
@@ -1,7 +1,33 @@
 今天Mac装一个软件之后直接把移动硬盘直接拔下来了，然后想再插上弄点的东西的时候发现不识别了，瞬间一头冷汗，以为移动硬盘坏掉了，然后赶紧Google发现了使用命令行挂载硬盘就行。
 
-第一步先查看硬盘的信息使用如下命令行
+## 第一步先查看硬盘的信息使用如下命令行
 
 ```java
  diskutil list
+```
+
+输出如下
+
+```java
+/dev/disk0 (internal, physical):
+   #:                       TYPE NAME                    SIZE       IDENTIFIER
+   0:      GUID_partition_scheme                        *251.0 GB   disk0
+   1:                        EFI EFI                     209.7 MB   disk0s1
+   2:                 Apple_APFS Container disk1         250.8 GB   disk0s2
+
+/dev/disk1 (synthesized):
+   #:                       TYPE NAME                    SIZE       IDENTIFIER
+   0:      APFS Container Scheme -                      +250.8 GB   disk1
+                                 Physical Store disk0s2
+   1:                APFS Volume Macintosh HD            199.2 GB   disk1s1
+   2:                APFS Volume Preboot                 22.2 MB    disk1s2
+   3:                APFS Volume Recovery                509.8 MB   disk1s3
+   4:                APFS Volume VM                      3.2 GB     disk1s4
+
+/dev/disk2 (external, physical):
+   #:                       TYPE NAME                    SIZE       IDENTIFIER
+   0:     FDisk_partition_scheme                        *1.0 TB     disk2
+   1:                 DOS_FAT_32 A                       500.1 GB   disk2s1
+   2:                 DOS_FAT_32 B                       500.1 GB   disk2s2
+   
 ```
