--- a/Mac 使用笔记/1、移动硬盘读出不出来.md
+++ b/Mac 使用笔记/1、移动硬盘读出不出来.md
@@ -31,3 +31,11 @@
    2:                 DOS_FAT_32 B                       500.1 GB   disk2s2
    
 ```
+
+## 第二步 发现/dev/disk2是我的移动硬盘然后使用挂载命令直接挂载就行如下
+
+```java
+sudo  fsck_hfs -fy /dev/disk2
+在执行装载命令之前先执行上边这行命令
+sudo diskutil mount /dev/disk2
+```
