--- a/android/自定义View/5、属性动画次篇.md
+++ b/android/自定义View/5、属性动画次篇.md
@@ -34,6 +34,29 @@ animator.start();
     animator.setDuration(1000);
     animator.start();
 ```
+## 3.ProVinceEvaluator 
+> 自定义Evaluator 设置城市String类型参数动画改变    
+```java
+    private class ProVinceEvaluator implements TypeEvaluator<String> {
+        // 重写 evaluate() 方法，让 String 可以作为属性来做动画
+        @Override
+        public String evaluate(float fraction, String startValue, String endValue) {
+            //北京市  ->    上海  中间所有的城市列表list，对list做操作
+            int startIndex = proList.indexOf(startValue);
+            int endIndex = proList.indexOf(endValue);
+            int index = startIndex + (endIndex - startIndex) * fraction;
+            
+            return proList.get(index);
+        }
+    }
+```
+> 配合ObjectAnimator使用    
+```java
+    ObjectAnimator animator = ObjectAnimator.ofObject(view, "province",new ProVinceEvaluator(), "北京市","上海市");
+    animator.setInterpolator(new LinearInterpolator());
+    animator.setDuration(1000);
+    animator.start();
+```
 # 二、PropertyValuesHolder和ObjectAnimator.ofPropertyValuesHolder() 多个动画一起执行
 ```java
      // 使用 PropertyValuesHolder.ofFloat() 来创建不同属性的动画值方案
