--- a/android/自定义View/5、属性动画次篇.md
+++ b/android/自定义View/5、属性动画次篇.md
@@ -13,7 +13,7 @@ animator.start();
 > 自建HSV模式HsvEvaluator。
 [点这里](https://www.baidu.com)
  
-## 2.PointFEvaluator 来自定义其他Evaluator 插值器
+## 2.PointFEvaluator 来自定义其他Evaluator 计算器
 > 自定义Evaluator 设置    
 ```java
     private class PointFEvaluator implements TypeEvaluator<PointF> {
@@ -107,3 +107,5 @@ animator.start();
 ```
 
 ![](https://github.com/IRVING18/notes/blob/master/android/file/keyframe.gif)
+
+# 五、插值器interpolation使用
