--- a/android/自定义View/6、属性动画次篇.md
+++ b/android/自定义View/6、属性动画次篇.md
@@ -109,3 +109,7 @@ animator.start();
 ![](https://github.com/IRVING18/notes/blob/master/android/file/keyframe.gif)
 
 # 五、插值器interpolation使用
+#### 用法一：
+> Interpolator插值器的用法，getInterpolation(percent百分比)能获取插值器相关参数
+
+
