--- a/android/自定义View/6、属性动画次篇.md
+++ b/android/自定义View/6、属性动画次篇.md
@@ -109,11 +109,12 @@ animator.start();
 ![](https://github.com/IRVING18/notes/blob/master/android/file/keyframe.gif)
 
 # 五、插值器interpolation使用
-#### 用法一：
+## 用法一：
 > Interpolator插值器的用法，getInterpolation(percent百分比)能获取插值器相关参数
 
 根据interpolation.getInterpolation(percent)方法可以直接控制动画的相关属性速率。   
-** 场景一： 画圈圈**   
+
+**场景一： 画圈圈**   
 
 1. canvas.drawCircle()就可以   
 2. 怎么控制画自定多个circle画呢，可以用list存起来，然后遍历list 然后draw   
