--- a/android/自定义View/7、硬件加速.md
+++ b/android/自定义View/7、硬件加速.md
@@ -1,1 +1,16 @@
+# 硬件加速
+## 一、硬件加速概念
+> 使用GPU的方式绘制叫做硬件加速   
 
+- 软件绘制：绘制到bitmap上
+- 硬件绘制：用GPU绘制
+- 硬件加速 ：GPU绘制速度快所以叫硬件加速
+## 二、离屏缓冲
+> 离屏缓冲 ：单独拿出一块区域来绘制
+
+saveLayer 可以在draw绘制过程中变化
+setLayerType 
+ 	setLayerType(VIEW.LAYER_TYPE_HARDWRE)//设置使用硬件openGl离屏缓冲
+	setLayerType(VIEW.LAYER_TYPE_HARDWRE)//设置使用软件bitmap的离屏缓冲
+	setLayerType(VIEW.LAYER_TYPE_NONE)//设置取消离屏缓冲
+不能再draw中来回设置
