--- a/android/自定义View/7、硬件加速.md
+++ b/android/自定义View/7、硬件加速.md
@@ -8,9 +8,35 @@
 ## 二、离屏缓冲
 > 离屏缓冲 ：单独拿出一块区域来绘制
 
-saveLayer 可以在draw绘制过程中变化
-setLayerType 
- 	setLayerType(VIEW.LAYER_TYPE_HARDWRE)//设置使用硬件openGl离屏缓冲
-	setLayerType(VIEW.LAYER_TYPE_HARDWRE)//设置使用软件bitmap的离屏缓冲
-	setLayerType(VIEW.LAYER_TYPE_NONE)//设置取消离屏缓冲
-不能再draw中来回设置
+### 1、官方文档推荐
+```java
+  public AvatarXformodeView(Context context, @Nullable AttributeSet attrs) {
+        super(context, attrs);
+        setLayerType(View.LAYER_TYPE_HARDWARE,paint);
+    }
+```
+
+> 使用不方便，只能全局设置，不能再一次ondraw（）中不能设置阶段性使用，也就是不能来回设置。    
+#### 使用方式
+```java
+  setLayerType(VIEW.LAYER_TYPE_HARDWRE)//设置使用硬件openGl离屏缓冲
+  setLayerType(VIEW.LAYER_TYPE_HARDWRE)//设置使用软件bitmap的离屏缓冲
+  setLayerType(VIEW.LAYER_TYPE_NONE)//设置取消离屏缓冲
+```
+
+### 2、灵活使用方式，只是官网说明比较重
+
+```java
+   //设置circleRectF范围离屏缓冲
+   int save = canvas.saveLayer(circleRectF, paint);
+   //画圆形框
+   canvas.drawOval(circleRectF, paint);
+   paint.setXfermode(xfermode);
+   //画图形
+   canvas.drawBitmap(bitmap, PADDING, PADDING, paint);
+   //恢复离屏缓冲，就是把图形绘制完再绘制到画布上
+   paint.setXfermode(null);
+   canvas.restoreToCount(save);
+```
+
+[结合Xformode看]()
