--- a/android/自定义View/7、硬件加速.md
+++ b/android/自定义View/7、硬件加速.md
@@ -39,4 +39,4 @@
    canvas.restoreToCount(save);
 ```
 
-[结合Xformode看]()
+[结合Xformode看](https://github.com/IRVING18/notes/blob/master/android/自定义View/9、PathMeasure、xformode.md)
