--- a/android/自定义View Practice/3、简易表盘.md
+++ b/android/自定义View Practice/3、简易表盘.md
@@ -1,5 +1,5 @@
 # DashBoardView 基本表盘
-
+[项目地址](https://github.com/IRVING18/XfermodePrecitice)
 **主要包含知识点：**
 - 1.PathDashPathEffect 的使用。
 - 2.PathMeasure 的使用
