--- a/linux/1.vim使用.md
+++ b/linux/1.vim使用.md
@@ -1,1 +1,18 @@
-sdfsd
+# Vim 基本使用
+### 1、删除一行
+```java
+ dd
+```
+### 2、撤销与反撤销
+```java
+ u : 撤销
+ ctrl r :反撤销
+```
+### 3、复制
+- 1）单行复制    
+在命令模式下，将光标移动到将要复制的行处，按“yy”进行复制；
+- 2）多行复制 在命令模式下，将光标移动到将要复制的首行处，按“nyy”复制n行；其中n为1、2、3……   
+### 4、粘贴
+```java
+ p
+```
