--- a/android/自定义View/A13、多点触摸.md
+++ b/android/自定义View/A13、多点触摸.md
@@ -24,3 +24,77 @@
 
 #### 2.3 event.findPointerIndex(pointerId);
 > 通过pointerID手指id获取index。
+
+
+
+# 二、多点触摸几种使用情况
+- 1、接力类型的使用
+> 比如按下一个手指滑动，然后又按下第二根手指，然后就把事件交给第二根手指滑动。    
+- 2、配合类型的使用
+>     
+- 3、互不干扰类型的使用
+> 
+
+
+## 1、接力型举例
+```java
+    //当前处理事件的手指，pointerID，
+    private int mTrackingPointerId1;
+    @Override
+    public boolean onTouchEvent(MotionEvent event) {
+
+        switch (event.getActionMasked()) {
+            case MotionEvent.ACTION_DOWN:
+                mTrackingPointerId1 = event.getPointerId(0);
+                downX = event.getX();
+                downY = event.getY();
+                //保存上次移动到的位置
+                originOffsetX = offsetX;
+                originOffsetY = offsetY;
+                break;
+            case MotionEvent.ACTION_MOVE:
+                //获取当前手指的index
+                int pointerIndex = event.findPointerIndex(mTrackingPointerId1);
+                offsetX = originOffsetX + event.getX(pointerIndex) - downX;
+                offsetY = originOffsetY + event.getY(pointerIndex) - downY;
+                invalidate();
+                break;
+                //多点触摸按下，其他手指按下,那么直接把事件传递给这个手指来处理
+            case MotionEvent.ACTION_POINTER_DOWN:
+                //获取新的手指index
+                int actionIndex = event.getActionIndex();
+                //根据index获取该手指的Id
+                mTrackingPointerId1 = event.getPointerId(actionIndex);
+                downX = event.getX(actionIndex);
+                downY = event.getY(actionIndex);
+                originOffsetX = offsetX;
+                originOffsetY = offsetY;
+                break;
+            case MotionEvent.ACTION_POINTER_UP:
+                //获取当前活跃的index
+                actionIndex = event.getActionIndex();
+                //通过index获取对应的pointerId
+                int pointerId = event.getPointerId(actionIndex);
+                //如果活跃的id正好是当前处理事件的id
+                //如果是活跃的id，那么就把事件传递给最后一个pointer。这个规则只是随心想的，换个规则也没问题。
+                if (pointerId == mTrackingPointerId1) {
+                    //如果要传递给的这个pointer恰好就是最好一个，那么就传给倒数第二个
+                    int newIndex;
+                    if (actionIndex == event.getPointerCount() - 1) {
+                        newIndex = event.getPointerCount() - 2;
+                    } else {
+                        newIndex = event.getPointerCount() - 1;
+                    }
+                    //传递事件给这个pointer
+                    mTrackingPointerId1 = event.getPointerId(newIndex);
+                    downX = event.getX(actionIndex);
+                    downY = event.getY(actionIndex);
+                    originOffsetX = offsetX;
+                    originOffsetY = offsetY;
+                }
+                break;
+        }
+        return true;
+    }
+
+```
