--- a/android/自定义View/A13、多点触摸.md
+++ b/android/自定义View/A13、多点触摸.md
@@ -31,13 +31,13 @@
 - 1、接力类型的使用
 > 比如按下一个手指滑动，然后又按下第二根手指，然后就把事件交给第二根手指滑动。    
 - 2、配合类型的使用
->     
+> 比如计算所有手指的平均值来控制view的滑动。    
 - 3、互不干扰类型的使用
 > 
 
 
 ## 1、接力型举例
-[代码地址]()
+[代码地址](https://github.com/IRVING18/MutiTouchDemo)
 
 ```java
     //当前处理事件的手指，pointerID，
@@ -99,4 +99,59 @@
         return true;
     }
 
+```
+## 2、配合型举例
+[代码地址](https://github.com/IRVING18/MutiTouchDemo)
+
+- 2.1计算每一次按下时所有手指的x，y平局值。但是当这个手指是抬起事件时就不计入总数了。
+- 2.2计算规则就是遍历所有手指，然后把sumX = 所有event.getX(),最后用sumX/pointCount;
+- 2.3算出中心点之后，在down事件时保存下来，然后在move时用最新的fucus中心点 - down保存的中心点就是偏移量。其实就和单点时逻辑是一样的
+
+```java
+    @Override
+    public boolean onTouchEvent(MotionEvent event) {
+
+        //计算每次事件,都重新计算总体移动距离
+        float sumX = 0;
+        float sumY = 0;
+        //获取手指总个数
+        int pointerCount = event.getPointerCount();
+        //判断当前是否为抬起事件，如果是抬起，就不算它了。
+        boolean isPointerUp = event.getActionMasked() == MotionEvent.ACTION_POINTER_UP;
+        //遍历所有的手指
+        for (int i = 0; i < pointerCount; i++) {
+            //遍历到的这个手指是当前活跃的手指，而且它还是抬起事件，那么就不记录这个了。
+            if (i == event.getActionIndex() && isPointerUp) {
+                continue;
+            }
+            sumX += event.getX(i);
+            sumY += event.getY(i);
+        }
+        //如果有抬起事件就把基数减一
+        if (isPointerUp) {
+            pointerCount -= 1;
+        }
+
+        //多手指的中心点
+        float focusX = sumX / pointerCount;
+        float focusY = sumY / pointerCount;
+
+        switch (event.getActionMasked()) {
+            case MotionEvent.ACTION_DOWN:
+                //多点触摸按下，
+            case MotionEvent.ACTION_POINTER_DOWN:
+            case MotionEvent.ACTION_POINTER_UP:
+                downX = focusX;
+                downY = focusY;
+                originOffsetX = offsetX;
+                originOffsetY = offsetY;
+                break;
+            case MotionEvent.ACTION_MOVE:
+                offsetX = originOffsetX + focusX - downX;
+                offsetY = originOffsetY + focusY - downY;
+                invalidate();
+                break;
+        }
+        return true;
+    }
 ```
