--- a/android/自定义View/A13、多点触摸.md
+++ b/android/自定义View/A13、多点触摸.md
@@ -13,7 +13,8 @@
 也就是说它仅仅是一个事件数组，和手指位置没有关系
 - pointer ： 这个代表的则是手指，他是有顺序有对应的。   
 比如第一个手指按下，那么它对应会产生一个pointerId，而这个ID是对应这个手指的。    
-比如两个手指按下，第一个pointer=0，第二个pinter=1，如果抬起第一个，那么剩下的就是pointer=1的，如果抬起第二个，那么剩下pointer=0的。
+比如两个手指按下，第一个pointer=0，第二个pinter=1，如果抬起第一个，那么剩下的就是pointer=1的，如果抬起第二个，那么剩下pointer=0的。    
+注意：pointerId在手指抬起之后并不会和index一样直接消除，而是会保存下来，等手指再次按下的时候回复用。也就是说pointerId并不一定是连续的。
 
 **index和pointerId 对应转换方法：**    
 #### 2.1 event.getActionIndex()
@@ -25,7 +26,8 @@
 #### 2.3 event.findPointerIndex(pointerId);
 > 通过pointerID手指id获取index。
 
-
+#### 2.4 event.getPointerCount();
+> 获取全部手指数量。
 
 # 二、多点触摸几种使用情况
 - 1、接力类型的使用
@@ -33,7 +35,7 @@
 - 2、配合类型的使用
 > 比如计算所有手指的平均值来控制view的滑动。    
 - 3、互不干扰类型的使用
-> 
+> 比如多手指绘画
 
 
 ## 1、接力型举例
@@ -155,3 +157,60 @@
         return true;
     }
 ```
+
+## 3、互不干扰型例子
+[代码地址](https://github.com/IRVING18/MutiTouchDemo)
+
+- 3.1 在ACTION_DOWN和ACTION_POINTER_DOWN时，把按下的点存储在Path的SparseArray<Path>里
+- 3.2 在ACTION_MOVE时，遍历Path,path.lineTo(新的点坐标)
+- 3.3 在ondraw里遍历，canvas.drawPath()
+    
+ ```java
+  @Override
+    public boolean onTouchEvent(MotionEvent event) {
+        switch (event.getActionMasked()) {
+            case MotionEvent.ACTION_DOWN:
+                //多手指
+            case MotionEvent.ACTION_POINTER_DOWN:
+                //获取当前活动的index
+                int actionIndex = event.getActionIndex();
+                //根据index获取pointerId
+                int pointerId = event.getPointerId(actionIndex);
+                //因为pointerID不会清除掉，会存下来，等待复用。而我们用的pointerID当的数组中的位置，所以这个位置可能复用，复用的时候就不创建新的path了。
+                //如果pointerId对应的Path存储过，那就直接设置
+                if (pathList.get(pointerId) == null) {
+                    Path path = new Path();
+                    path.moveTo(event.getX(actionIndex), event.getY(actionIndex));
+                    pathList.append(pointerId, path);
+                } else {
+                    pathList.valueAt(pointerId).moveTo(event.getX(actionIndex), event.getY(actionIndex));
+                }
+                invalidate();
+                break;
+            case MotionEvent.ACTION_MOVE:
+                for (int i = 0; i < event.getPointerCount(); i++) {
+                    int p = event.getPointerId(i);
+                    pathList.get(p).lineTo(event.getX(i), event.getY(i));
+                }
+                invalidate();
+                break;
+            case MotionEvent.ACTION_UP:
+            case MotionEvent.ACTION_POINTER_UP:
+                int p = event.getPointerId(event.getActionIndex());
+                pathList.valueAt(p).reset();
+                invalidate();
+                break;
+            default:
+                break;
+        }
+        return true;
+    }
+
+    @Override
+    protected void onDraw(Canvas canvas) {
+        super.onDraw(canvas);
+        for (int i = 0; i < pathList.size(); i++) {
+            canvas.drawPath(pathList.valueAt(i), mPaint);
+        }
+    }
+ ```
