--- a/android/自定义View/A12、手势-初探.md
+++ b/android/自定义View/A12、手势-初探.md
@@ -1,5 +1,8 @@
 # 手势触摸
 
+[使用场景1:仿写PhotoView](https://github.com/IRVING18/PhotoViewSimple)
+[使用场景2:简单实现viewPager](https://github.com/IRVING18/ViewPagerSimple)
+
 > 简要说明：  
 > 1、onTouchEvent()的重写   
 > 2、GestureDetectorCompat 手势的监听 **OnGestureListener** 和 **OnDoubleTapListener**    
