--- a/网络协议/0、非对称加密、编码.md
+++ b/网络协议/0、非对称加密、编码.md
@@ -19,3 +19,38 @@ DSA：专门用来签名，速度快
 # Base58
 Base64编码去掉: 零和大写O, 英文大写I和小写l,加号和斜杠。
 用于比特币手写Base64的码值，防止不好辨认。加号和斜杠去掉是方便双击复制。
+
+
+# URL Encoding
+URI的百分号编码
+他是对一些特殊字符进行%对应，防止影响网站地址的解析。
+比如/转成%2F，+转成%2B等。其他在地址栏没有影响的符号就不变了。
+
+# 压缩与解压缩
+
+
+# 媒体数据的编解码
+1、什么是图片、音频、视频的编解码？
+图片的编码：把图像数据写成JPG/PNG等文件的编码格式。
+图片的编码：把JPG、PNG等文件的数据解析成标准的图像数据。
+2、图片压缩
+
+# Hash
+定义：把任意数据转换成指定大小范围的数据。
+作用：摘要、数字指纹
+经典算法：md5、SHA1、SHA256
+不是编码，不可逆。
+实际用途：
+1、数据完整性验证
+2、快速查找：hashCode()和HashMap
+(为什么hashCode和equals方法要一起重写：因为hashCode是用来快速识别的，它和equals功能互补。重写了equals之后这个class的判断方法就变化了，而hashcode不重写它就用的是父类Object的hashcode。所以容易出问题。)
+
+# 字符集
+含义：一个由整数向现实世界中的文字符号的Map
+分支：
+ - ASCII：128个字符
+ - ISO-8859-1：对ASCII进行扩充
+ - Unicode：13万个字符，多字节
+    - UTF-8:Unicode编码分支
+    - UTF-16:Unicode编码分支
+ - GBK/GB2312/GB18030:中国自研标准
