--- a/android/自定义View/A12、手势-初探.md
+++ b/android/自定义View/A12、手势-初探.md
@@ -4,6 +4,19 @@
 
 [使用场景2:简单实现viewPager](https://github.com/IRVING18/ViewPagerSimple)
 
+## 零、onTouchEvent说明
+### 1、getAction 和 getActionMasked区别：后者可以监听到多手指触控
+### 2、MotionEvent说明
+|Event|说明|
+|:-  |:-  |
+|ACTION_DOWN|手指 初次接触到屏幕 时触发。|
+|ACTION_MOVE|手指 在屏幕上滑动 时触发，会多次触发。|
+|ACTION_UP|手指 离开屏幕 时触发。|
+|ACTION_CANCEL|事件 被上层拦截 时触发。|
+|ACTION_OUTSIDE|手指 不在控件区域 时触发。|
+|ACTION_POINTER_DOWN|有非主要的手指按下(即按下之前已经有手指在屏幕上)。|
+|ACTION_POINTER_UP|有非主要的手指抬起(即抬起之后仍然有手指在屏幕上)。|
+
 
 > 简要说明：  
 > 1、onTouchEvent()的重写   
