--- a/网络协议/3、登录和授权.md
+++ b/网络协议/3、登录和授权.md
@@ -1,1 +1,12 @@
+# 
 
+## 一、Cookie
+- cookie的起源：购物车
+- cookie作用
+  - 会话管理：登录状态、购物车
+  - 个性化：用户偏好、主题
+  - Tracking：分析用户行为
+- XSS(Cross-site scripting)(角本攻击):解决方式： HttpOnly(本地脚本搜不到)
+- XSRF(Cross-site request forgery)(跨站请求伪造)：解决方式：Referer（标志网站来源）
+## 二、Authorization
+- Basic
