--- a/网络协议/3、登录和授权.md
+++ b/网络协议/3、登录和授权.md
@@ -9,4 +9,8 @@
 - XSS(Cross-site scripting)(角本攻击):解决方式： HttpOnly(本地脚本搜不到)
 - XSRF(Cross-site request forgery)(跨站请求伪造)：解决方式：Referer（标志网站来源）
 ## 二、Authorization
-- Basic
+- Basic ：
+  <username;password Base64>
+- Bearer ：
+  - Bearer <bearer token>
+  - OAuth2:第三方认证
