--- a/网络协议/3、登录和授权.md
+++ b/网络协议/3、登录和授权.md
@@ -14,7 +14,7 @@
 - Bearer ：
   - Bearer \<bearer token\>
   - OAuth2:第三方认证 
-    - 1.Github给掘金客户端 auth code
+    - 1.Github给掘金客户端 secret code
     - 2.然后掘进客户端把code发给后端，然后掘金服务端拿着code去请求github服务端，获取access token
     - 3.然后客户端需要什么数据，发给服务端，服务端再去GitHub获取，不暴露token给客户端。
   - 微信登录：
