--- a/网络协议/3、登录和授权.md
+++ b/网络协议/3、登录和授权.md
@@ -17,4 +17,4 @@
     - 1.Github给掘金客户端 secret code
     - 2.然后掘进客户端把code发给后端，然后掘金服务端拿着code去请求github服务端，获取access token
     - 3.然后客户端需要什么数据，发给服务端，服务端再去GitHub获取，不暴露token给客户端。
-  - 微信登录：
+  - refresh token：如果掘金丢了token，然后调用这个然token失效再去重新获取新的token。
