--- a/网络协议/3、登录和授权.md
+++ b/网络协议/3、登录和授权.md
@@ -18,3 +18,5 @@
     - 2.然后掘进客户端把code发给后端，然后掘金服务端拿着code去请求github服务端，获取access token
     - 3.然后客户端需要什么数据，发给服务端，服务端再去GitHub获取，不暴露token给客户端。
   - refresh token：如果掘金丢了token，然后调用这个然token失效再去重新获取新的token。
+## 三、TCP/IP 协议族
+1、TCP :传输层，分块传输是http，sftp等都会用到。所以就把分块传输功能封装出来了，就是TCP
