--- a/网络协议/3、登录和授权.md
+++ b/网络协议/3、登录和授权.md
@@ -23,3 +23,5 @@
 - 2、TCP :传输层（TCP,UDP），数据完整性是通过分块传输实现的。分块传输是http，sftp，FTP，DNS等都会用到。所以就把分块传输功能封装出来了，就是TCP。
 - 3、IP :网络层，只管传数据。他是TCP和UDP都需要传递数据，所以又封装了一层专门传递数据，就是IP层。
 - 4、Link Layer :(以太网、wifi) 数据链路层。
+
+![linear]()
