--- a/网络协议/3、登录和授权.md
+++ b/网络协议/3、登录和授权.md
@@ -24,4 +24,4 @@
 - 3、IP :网络层，只管传数据。他是TCP和UDP都需要传递数据，所以又封装了一层专门传递数据，就是IP层。
 - 4、Link Layer :(以太网、wifi) 数据链路层。
 
-![linear]()
+![linear](https://github.com/IRVING18/notes/blob/master/网络协议/file/tcp.png)
