--- a/网络协议/3、登录和授权.md
+++ b/网络协议/3、登录和授权.md
@@ -28,3 +28,6 @@
 ![linear](https://github.com/IRVING18/notes/blob/master/网络协议/file/tcp.png)
 
 ### （2）TCP链接 ：有状态
+- 1、长连接
+ - 为什么长连接：如：保持运营商和手机的端口不关闭，目的是再没有消息传递的时候仍然保持链接，为了推送消息。
+ - 长连接实现方式：心跳
