--- a/网络协议/3、登录和授权.md
+++ b/网络协议/3、登录和授权.md
@@ -31,3 +31,11 @@
 - 1、长连接
  - 为什么长连接：如：保持运营商和手机的端口不关闭，目的是再没有消息传递的时候仍然保持链接，为了推送消息。
  - 长连接实现方式：心跳
+
+
+## 四、HTTPS 链接
+- 1、客户端请求建立TLS链接
+- 2、服务器发回证书
+- 3、客户端验证服务器证书
+- 4、客户端信任服务器后，和服务器用非对称加密方式协商对称秘钥
+- 5、使用对称密钥通信
