--- a/网络协议/0、非对称加密、编码.md
+++ b/网络协议/0、非对称加密、编码.md
@@ -1,20 +1,30 @@
 # 非对称加密
 
-1、正着用就是加密，
-2、反正用就是签名
+- 1、正着用就是加密，公钥加密，然后私钥解密，私钥不传输。
+- 2、反正用就是签名，私钥加密，然后公钥解密，私钥同样不暴露。通过私钥加密的文件就可以当做签名文件，因为没有私钥谁也做不出这个文件。
 
-RSA：可以加密，可以签名
-DSA：专门用来签名，速度快
+RSA：可以加密，可以签名   
+DSA：专门用来签名，速度快   
+
+加密过程：    
+![linear](https://github.com/IRVING18/notes/blob/master/网络协议/file/签名加密.png)
 
 # Base64
 
-1、将二进制数据转换成64个字符组成的字符串的编码算法。
-2、什么是二进制数据？
+- 1、将二进制数据转换成64个字符组成的字符串的编码算法。
+- 2、什么是二进制数据？
   非文本数据就是二进制数据。
-3、将二进制数据转成字符串，这些字符串包含：1、26个小写字母 2、26个大写字母 3、1-9 4、一个加号一个斜杠 +/
-4、Base64之后数据会变大，三个字符变成4个字符。
+- 3、将二进制数据转成字符串，这些字符串包含：1、26个小写字母 2、26个大写字母 3、1-9 4、一个加号一个斜杠 +/
+- 4、Base64之后数据会变大，三个字符变成4个字符。
  因为一个字符8个字节，然后Base64会切分成6个字节转成一个64中的字符,
-5、Base64不会更安全，安全只能通过加密。Base64也不会更高效，长度会增加数据长度增长不可能高效。
+- 5、Base64不会更安全，安全只能通过加密。Base64也不会更高效，长度会增加数据长度增长不可能高效。
+
+## base64的对应表
+![linear](https://github.com/IRVING18/notes/blob/master/网络协议/file/base64-1.png)
+
+## Base64转换过程
+> 把8个字节切成6个一组，然后去表中对应。
+![linear](https://github.com/IRVING18/notes/blob/master/网络协议/file/base64-2.png)
 
 # Base58
 Base64编码去掉: 零和大写O, 英文大写I和小写l,加号和斜杠。
@@ -26,8 +36,11 @@ URI的百分号编码
 他是对一些特殊字符进行%对应，防止影响网站地址的解析。
 比如/转成%2F，+转成%2B等。其他在地址栏没有影响的符号就不变了。
 
-# 压缩与解压缩
+## 需要转换的字符对应表
+![linear](https://github.com/IRVING18/notes/blob/master/网络协议/file/urlencoding1.png)
 
+# 压缩与解压缩
+![linear](https://github.com/IRVING18/notes/blob/master/网络协议/file/压缩1.png)
 
 # 媒体数据的编解码
 1、什么是图片、音频、视频的编解码？
