--- a/android/自定义View/A11、触摸反馈次篇.md
+++ b/android/自定义View/A11、触摸反馈次篇.md
@@ -1,1 +1,11 @@
 # 触摸反馈次篇
+
+## 事件分发消费机制
+
+![linear](https://github.com/IRVING18/notes/blob/master/android/file/dispatch.jpg)
+
+> 说明：dispatch中有判断条件来判断调用onInterceptTouchEvent()，onTouchEvent()和子view的dispatchTouchEvent()。
+
+### 分发流程：    
+
+![linear](https://github.com/IRVING18/notes/blob/master/android/file/dispatch1.jpg)
