--- a/android/线程/1、线程同步的本质原理.md
+++ b/android/线程/1、线程同步的本质原理.md
@@ -46,6 +46,7 @@
 - shutdown();安全的关闭线程，等到线程执行完再关闭线程。
 - shutdownNow();直接关闭线程。
 - execute();执行线程
+- submit(callable);有返回值的执行线程。但是是线程同步的。
 
 ```java
     static void executor() {
@@ -61,6 +62,34 @@
         executor.execute(runnable);
         executor.execute(runnable);
         executor.execute(runnable);
+    }
+    
+    static void callable() {
+        Callable<String> callable = new Callable<String>() {
+            @Override
+            public String call() {
+                try {
+                    Thread.sleep(1500);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+                return "Done!";
+            }
+        };
+
+        //有返回值的开启线程，返回Future，但是Future是线程同步的
+        ExecutorService executor = Executors.newCachedThreadPool();
+        Future<String> future = executor.submit(callable);
+        try {
+            while (true) {
+                if (future.isDone()) {
+                    String result = future.get();
+                    System.out.println("result: " + result);
+                }
+            }
+        } catch (InterruptedException | ExecutionException e) {
+            e.printStackTrace();
+        }
     }
 ```
 
