--- a/android/线程/1、线程同步的本质原理.md
+++ b/android/线程/1、线程同步的本质原理.md
@@ -97,5 +97,35 @@
 ## 一、线程同步的本质
 > 线程同步本质：是对资源的同步加锁，对资源要做到线程安全(Safty)
 
+### 1、直接将方法设置成synchronized
+> 这时其实是将当前对象的this直接当锁给了这个方法。
 
+注意：这时如果func1被锁住了，那么func2同样不能使用，因为他们的锁都是当前对象this
+```java
+    private synchronized void func1() {
+    }
+    private synchronized void func2() {
+    }
+```
 
+### 2、代码块加锁synchronized（）分别加锁
+> 可以对不同代码块进行加不同的锁
+
+注意：这时func1被锁了，但是不影响func2.他们绑定不同的锁
+```java
+    private final Object monitor1 = new Object();
+    private final Object monitor2 = new Object();
+    private void func1(int delta) {
+        synchronized (monitor1) {
+            x -= delta;
+            y -= delta;
+        }
+    }
+    
+    private void func2(String newName) {
+        synchronized (monitor2) {
+            name = newName;
+        }
+    }
+
+````
