--- a/android/线程/1、线程同步的本质原理.md
+++ b/android/线程/1、线程同步的本质原理.md
@@ -129,3 +129,36 @@
     }
 
 ````
+### 3、直接用Lock方式加锁
+- lock();加锁
+- unlock();解锁
+
+```java
+    ReentrantReadWriteLock lock = new ReentrantReadWriteLock();
+    Lock readLock = lock.readLock();
+    Lock writeLock = lock.writeLock();
+
+    private int x = 0;
+
+    private void count() {
+        writeLock.lock();
+        try {
+            x++;
+        } finally {
+            writeLock.unlock();
+        }
+    }
+
+    private void print(int time) {
+        readLock.lock();
+        try {
+            for (int i = 0; i < time; i++) {
+                System.out.print(x + " ");
+            }
+            System.out.println();
+        } finally {
+            readLock.unlock();
+        }
+    }
+```
+### 4、修饰符设置
