--- a/android/线程/1、线程同步的本质原理.md
+++ b/android/线程/1、线程同步的本质原理.md
@@ -162,4 +162,9 @@
     }
 ```
 ### 4、修饰符设置线程安全的变量
-- volatile 
+- volatile 设置参数为“原子性”，就是操作不需要考虑线程安全的。比如double，long的赋值就不是原子性的。
+- AtomicInterger/Boolean/Long 等，保证i++的原子性。
+```java
+AtomicInteger count = new AtomicInteger(0);
+count.incrementAndGet();//等于int count;count++;
+```
