--- a/android/线程/1、线程同步的本质原理.md
+++ b/android/线程/1、线程同步的本质原理.md
@@ -93,8 +93,7 @@
     }
 ```
 
-
-## 一、线程同步的本质
+## 二、线程同步的本质
 > 线程同步本质：是对资源的同步加锁，对资源要做到线程安全(Safty)
 
 ### 1、直接将方法设置成synchronized
@@ -167,4 +166,27 @@
 ```java
 AtomicInteger count = new AtomicInteger(0);
 count.incrementAndGet();//等于int count;count++;
+```
+
+### 5、死锁
+```java
+private void func1(){
+    synchronized(monitor1){
+        ...
+        synchronized(monitor2){
+        ...
+        }
+    }
+}
+
+private void func2(){
+    synchronized(monitor2){
+        ...
+        synchronized(monitor1){
+        ...
+        }
+    }
+}
+
+//然后多个线程分别调用func1()和func2();
 ```
