--- a/android/线程/1、线程同步的本质原理.md
+++ b/android/线程/1、线程同步的本质原理.md
@@ -190,3 +190,8 @@ private void func2(){
 
 //然后多个线程分别调用func1()和func2();
 ```
+## 扫盲
+### 悲观锁
+> 数据库的东西，线程没有这个。正常写数据时，先锁定数据，然后再操作数据计算。
+### 乐观锁
+> 也是数据库的
