--- a/android/线程/1、线程同步的本质原理.md
+++ b/android/线程/1、线程同步的本质原理.md
@@ -194,4 +194,4 @@ private void func2(){
 ### 悲观锁
 > 数据库的东西，线程没有这个。正常写数据时，先锁定数据，然后再操作数据计算。
 ### 乐观锁
-> 也是数据库的
+> 也是数据库的。正常写数据时，不锁定数据，计算完之后要写库的时候，再比对当前数据和我计算时拿到的数据是否一致。
