--- a/android/线程/2、线程原理2，线程通讯.md
+++ b/android/线程/2、线程原理2，线程通讯.md
@@ -1,1 +1,37 @@
 # 线程原理2，线程通讯
+
+## 结束线程
+- stop();已经被弃用，因为这个是暴力停止，不可控。
+- interrupt();给其他线程设置停止标志，需要在被调用interrupt的线程配合才能生效。通过Thread.interrupted()来拿到是否有其他线程调用interrupt方法。
+```java
+@Override
+    public void runTest() {
+        Thread thread = new Thread() {
+            @Override
+            public void run() {
+                for (int i = 0; i < 1_000_000; i++) {
+                    if (Thread.interrupted()) {
+                        // 收尾
+                        return;
+                    }
+                    try {
+                        Thread.sleep(2000);
+                    } catch (InterruptedException e) {
+                        // 收尾
+                        //睡眠时被其他线程调用interrupt就会抛出异常
+                        //抛异常 interrupt状态会被重置。所以如果不return的话，线程仍然会继续跑。
+                        return;
+                    }
+                    System.out.println("number: " + i);
+                }
+            }
+        };
+        thread.start();
+        try {
+            Thread.sleep(500);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        thread.interrupt();
+    }
+```
