--- a/android/线程/2、线程原理2，线程通讯.md
+++ b/android/线程/2、线程原理2，线程通讯.md
@@ -19,7 +19,7 @@
                     } catch (InterruptedException e) {
                         // 收尾
                         //睡眠时被其他线程调用interrupt就会抛出异常
-                        //抛异常 interrupt状态会被重置。所以如果不return的话，线程仍然会继续跑。
+                        //抛异常 Thread.interrupted()状态会被重置。所以如果不return的话，线程仍然会继续跑。
                         return;
                     }
                     System.out.println("number: " + i);
