--- a/android/线程/2、线程原理2，线程通讯.md
+++ b/android/线程/2、线程原理2，线程通讯.md
@@ -1,6 +1,6 @@
 # 线程原理2，线程通讯
 
-## 结束线程
+## 一、结束线程
 - stop();已经被弃用，因为这个是暴力停止，不可控。
 - interrupt();给其他线程设置停止标志，需要在被调用interrupt的线程配合才能生效。通过Thread.interrupted()来拿到是否有其他线程调用interrupt方法。
 ```java
