--- a/android/线程/2、线程原理2，线程通讯.md
+++ b/android/线程/2、线程原理2，线程通讯.md
@@ -35,3 +35,7 @@
         thread.interrupt();
     }
 ```
+## wait()/notify()
+- wait();暂时释放monitor锁；wait也会和sleep都会在被其他线程调用interrupt时抛出异常。
+- notifyAll();唤醒所有wait()的线程
+
