--- a/android/线程/2、线程原理2，线程通讯.md
+++ b/android/线程/2、线程原理2，线程通讯.md
@@ -38,4 +38,49 @@
 ## wait()/notify()
 - wait();暂时释放monitor锁；wait也会和sleep都会在被其他线程调用interrupt时抛出异常。
 - notifyAll();唤醒所有wait()的线程
+```java
+ private synchronized void initString() {
+        sharedString = "rengwuxian";
+        notifyAll();
+    }
 
+    private synchronized void printString() {
+        while (sharedString == null) {
+            try {
+                wait();
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+        System.out.println("String: " + sharedString);
+    }
+
+    @Override
+    public void runTest() {
+        final Thread thread1 = new Thread() {
+            @Override
+            public void run() {
+                try {
+                    Thread.sleep(500);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+                printString();
+            }
+        };
+        thread1.start();
+        Thread thread2 = new Thread() {
+            @Override
+            public void run() {
+                Thread.yield();
+                try {
+                    Thread.sleep(1000);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+                initString();
+            }
+        };
+        thread2.start();
+    }
+```
