--- a/android/线程/2、线程原理2，线程通讯.md
+++ b/android/线程/2、线程原理2，线程通讯.md
@@ -84,3 +84,8 @@
         thread2.start();
     }
 ```
+## join()
+> 插队，在thread2执行中 thread1.join，那么就先执行thread1，就相当于thread2进入wait,然后等thread2执行完自动notify。
+
+## yield()
+> 
