--- a/android/线程/2、线程原理2，线程通讯.md
+++ b/android/线程/2、线程原理2，线程通讯.md
@@ -88,4 +88,4 @@
 > 插队，在thread2执行中 thread1.join，那么就先执行thread1，就相当于thread2进入wait,然后等thread2执行完自动notify。
 
 ## yield()
-> 
+> 让出时间片给高优先级的线程。也就是说让当前Thread先wait然后给其他高优线程执行。
