--- a/android/线程/2、线程原理2，线程通讯.md
+++ b/android/线程/2、线程原理2，线程通讯.md
@@ -35,7 +35,7 @@
         thread.interrupt();
     }
 ```
-## wait()/notify()
+## 二、wait()/notify()
 - wait();暂时释放monitor锁；wait也会和sleep都会在被其他线程调用interrupt时抛出异常。
 - notifyAll();唤醒所有wait()的线程
 ```java
@@ -84,12 +84,12 @@
         thread2.start();
     }
 ```
-## join()
+## 三、join()
 > 插队，在thread2执行中 thread1.join，那么就先执行thread1，就相当于thread2进入wait,然后等thread2执行完自动notify。
-## yield()
+## 四、yield()
 > 让出时间片给高优先级的线程。也就是说让当前Thread先wait然后给其他高优线程执行。
 
-## GC Root 和 内存泄漏
+## 五、GC Root 和 内存泄漏
 > GC Root持有的对象不会被释放，从而造成内存泄漏。
 
 - 运行中的线程
@@ -117,3 +117,5 @@
         }
     }
 ```
+## 六、怎么选择使用哪种方式开启线程
+
