--- a/android/线程/2、线程原理2，线程通讯.md
+++ b/android/线程/2、线程原理2，线程通讯.md
@@ -118,7 +118,10 @@
     }
 ```
 ## 六、怎么选择使用哪种方式开启线程
-1、Executors正常是最好用的。
-2、如果需要给主线程传递消息那么就用 Handler
-3、Service就不是线程，只是一个后台运行，IntentService是再service中维护了一个线程，它在线程操作上和Executors没有优势
+- 1、Executors正常是最好用的。
+- 2、如果需要给主线程传递消息那么就用 Handler
+- 3、特别小逻辑处理可以用AysncTask，劣势：实现相对繁琐
+- 4、Service就不是线程，只是一个后台运行，IntentService是再service中维护了一个线程，它在线程操作上和Executors没有优势
+    - 优势1：它可以获取context
+    - 优势2：有生命周期
     
