--- a/android/内存泄漏/内存泄漏.md
+++ b/android/内存泄漏/内存泄漏.md
@@ -1,1 +1,30 @@
+# 内存泄漏
 
+## 一、GC Root 和 内存泄漏
+> GC Root持有的对象不会被释放，从而造成内存泄漏。
+
+- 运行中的线程
+- static
+- 本地代码的引用
+
+### 举例：
+- AysncTask 容易造成内存泄漏的主要原因是因为，他里边有线程，而线程是一种GC Root。
+    - 当在AysncTask执行中，Activity关闭了，而AysncTask内部线程是**GCroot**，并且因为MyAysncTask是MainActvity的内部类，所以MyAysncTask会持有MainActivity的对象，直到线程结束，就会出现内存泄漏。
+- AysncTask 如果里边的线程没有特别长的执行时间，是不需要特别注意的。因为如果线程只是再Activity关闭之后几秒就执行完了，他就释放了。所以不用特别处理，只有当其中线程执行时间特别长的时候需要特殊处理。
+```java
+    @Override
+    protected void onCreate(Bundle savedInstanceState) {
+        super.onCreate(savedInstanceState);
+        setContentView(R.layout.activity_main);
+        
+        new MyAsyncleTask().execute();
+    }
+
+    class MyAsyncleTask extends AsyncTask {
+
+        @Override
+        protected Object doInBackground(Object[] objects) {
+            return null;
+        }
+    }
+```
