--- a/mysql/1、基本内容.md
+++ b/mysql/1、基本内容.md
@@ -1,15 +1,4 @@
-# Linux链接数据库
-- u 库名
-- h 地址
-- P 端口号
-- p 密码
-
-```java
-    mysql -u afo -h 127.0.0.1 -P 3306 -p
-```
-
-# 数据类型
-### 字符串类型
+# 字符串类型
 
 |类型|大小|用途|
 |----|-----|-----|
